--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -228,7 +228,7 @@
                             <ul>
                                 <li><a href="/"><i class="bx bx-right-arrow-alt"></i>Balance Sheet</a></li>
                                 <li><a href="/"><i class="bx bx-right-arrow-alt"></i>Profit & Loss A/c</a></li>
-                                <li><a href="load_stock_summary"><i class="bx bx-right-arrow-alt"></i>Stock Summary</a></li>
+                                <li><a href="load_stock_summarys"><i class="bx bx-right-arrow-alt"></i>Stock Summary</a></li>
                                 <li><a href="/"><i class="bx bx-right-arrow-alt"></i>Ratio Analysis</a></li>
                             </ul>
                         </li>
