--- a/app1/templates/load_stock_group.html
+++ b/app1/templates/load_stock_group.html
@@ -74,7 +74,7 @@ color: white;
 
     <div class="tbody p-0 m-0 container-fluid">
 
-        <div class="groups row container-fluid p-1 m-0">
+        <a href="load_item_details"><div class="groups row container-fluid p-1 m-0">
             <div class="name col-sm-8 col-6 p-0 m-0 flexy">
                 <h6>Item 1</h6>
             </div>
@@ -84,6 +84,7 @@ color: white;
                 <div class="col-4 p-2">2000</div>
             </div>
         </div>
+    </a>
         
         <div class="groups row container-fluid p-1 m-0">
             <div class="name col-sm-8 col-6 p-0 m-0 flexy">
