--- a/app1/templates/load_stock_summarys.html
+++ b/app1/templates/load_stock_summarys.html
@@ -77,44 +77,44 @@ color: white;
 
         <div class="groups row container-fluid p-1 m-0">
             <div class="name col-sm-8 col-6 p-0 m-0 flexy">
-              <a href="load_stock_group"><h6>Item one</h6></a>  
+              <a href="load_stock_group"><h6>Group one</h6></a>  
             </div>
             <div class="cash col-sm-4 col-6 row p-0 m-0 text-center">
-                <div class="col-4 p-2">10</div>
-                <div class="col-4 p-2">5</div>
+                <div class="col-4 p-2"></div>
+                <div class="col-4 p-2"></div>
                 <div class="col-4 p-2">500.00Rs</div>
             </div>
         </div>
         
         <div class="groups row container-fluid p-1 m-0">
             <div class="name col-sm-8 col-6 p-0 m-0 flexy">
-                <h6>Item 2</h6>
+                <h6>Group 2</h6>
             </div>
             <div class="cash col-sm-4 col-6 row p-0 m-0 text-center">
-                <div class="col-4 p-2">150</div>
-                <div class="col-4 p-2">100</div>
+                <div class="col-4 p-2"></div>
+                <div class="col-4 p-2"></div>
                 <div class="col-4 p-2">15000.00Rs</div>
             </div>
         </div>
 
             <div class="groups row container-fluid p-1 m-0">
                 <div class="name col-sm-8 col-6 p-0 m-0 flexy">
-                    <h6>Item 3</h6>
+                    <h6>Group 3</h6>
                 </div>
                 <div class="cash col-sm-4 col-6 row p-0 m-0 text-center">
-                    <div class="col-4 p-2">40</div>
-                    <div class="col-4 p-2">2500</div>
+                    <div class="col-4 p-2"></div>
+                    <div class="col-4 p-2"></div>
                     <div class="col-4 p-2">10000.00Rs</div>
                 </div>
             </div>
 
             <div class="groups row container-fluid p-1 m-0">
                 <div class="name col-sm-8 col-6 p-0 m-0 flexy">
-                    <h6>Item 4</h6>
+                    <h6>Group 4</h6>
                 </div>
                 <div class="cash col-sm-4 col-6 row p-0 m-0 text-center">
-                    <div class="col-4 p-2">150</div>
-                    <div class="col-4 p-2">100</div>
+                    <div class="col-4 p-2"></div>
+                    <div class="col-4 p-2"></div>
                     <div class="col-4 p-2">15000.00Rs</div>
                 </div>
             </div>
