--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -232,7 +232,21 @@
                                 <li><a href="/"><i class="bx bx-right-arrow-alt"></i>Ratio Analysis</a></li>
                             </ul>
                         </li>
+
                         <li>
+                            <a href="javascript:;" class="has-arrow">
+
+                                <div class="parent-icon"><span class="iconify" data-icon="bx:add-to-queue"></span></div>
+                                <div class="menu-title text-center">Input data</div>
+
+                            </a>
+                            <ul>
+                                <li><a href="input_group"><i class="bx bx-right-arrow-alt"></i>Create Groups</a></li>
+                                <li><a href="input_group_items"><i class="bx bx-right-arrow-alt"></i>Create group Items</a></li>
+                               
+                            </ul>
+                        </li>
+                        
 
                            
                           
